# cmake_sample

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: CMakeLists.txt
include/cpp_env_sample/: example.h
main/: CMakeLists.txt  main.cc
scripts/: install_lcov.sh
src/: CMakeLists.txt  example.cc
test/: CMakeLists.txt  gtest_example.cc
